--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGO_URL="mongodb+srv://intible:81082%4043716@intible.bugxqhe.mongodb.net/srcimg"
+# CLOUDNARY_CLOUD_NAME="ddv7gse97"
+# CLOUDNARY_PRESET_NAME="srcimg"
+# CLOUDNARY_API_KEY="478292776746713"
