--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGO_URL="mongodb+srv://intible:81082%4043716@intible.bugxqhe.mongodb.net/srcim
 # CLOUDNARY_CLOUD_NAME="ddv7gse97"
 # CLOUDNARY_PRESET_NAME="srcimg"
 # CLOUDNARY_API_KEY="478292776746713"
+
+NEXTAUTH_SECRET="rfcgvhbjnkm"
+NEXTAUTH_URL="http://localhost:3000"
