--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ MONGO_URL="mongodb+srv://intible:81082%4043716@intible.bugxqhe.mongodb.net/srcim
 # CLOUDNARY_PRESET_NAME="srcimg"
 # CLOUDNARY_API_KEY="478292776746713"
 
-NEXTAUTH_SECRET="rfcgvhbjnkm"
+NEXTAUTH_SECRET="ctlhktRqmku/JEwZZNiNhiQKUa/yu2QgijLkzx32sw8="
 NEXTAUTH_URL="http://localhost:3000"
