--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "nextjs-toploader": "^1.6.4",
+    "openssh": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
